[gd_scene load_steps=2 format=3 uid="uid://7x0m6mo0l388"]

[ext_resource type="Script" path="res://test.gd" id="1_i1iwq"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_i1iwq")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open File(s)"
position = Vector2i(0, 36)
size = Vector2i(452, 159)
visible = true
ok_button_text = "Open"
file_mode = 1
access = 2

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FilesSelected"]
